--- a/safe-exploration-site.html
+++ b/safe-exploration-site.html
@@ -10,8 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Join the Explaration</h1>
-    <button class="btn-apply">Apply</button>
-    
+    <div id="hero">
+        <img src="/images/spacex.png" alt="spacex logo" id="logo">
+        <h1>Join the <span class="underline">Explaration</span></h1>
+        <button class="btn">Apply</button>
+    </div>
+    <section>
+        <h3>Terms and condition apply</h3>
+    </section>
 </body>
 </html>
