--- a/safe-exploration-site.html
+++ b/safe-exploration-site.html
@@ -12,11 +12,9 @@
 <body>
     <div id="hero">
         <img src="/images/spacex.png" alt="spacex logo" id="logo">
-        <h1>Join the <span class="underline">Explaration</span></h1>
+        <h1 id="title">Join the <span class="underline">Explaration</span></h1>
         <button class="btn">Apply</button>
     </div>
-    <section>
         <h3>Terms and condition apply</h3>
-    </section>
 </body>
 </html>
