--- a/align.html
+++ b/align.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="align.css">
 </head>
 <body>
     <div class="container">
-        <div>🧪</div>
-        <div>🥽</div>
-        <div>🩺</div>
+            <div class="item">🧪</div>
+            <div class="item">🥽</div>
+            <div class="item">🩺</div>
     </div>
     
 </body>
